k8s/open-webui/resources/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: data-volume
      containers:
        - name: open-webui
          image: ghcr.io/open-webui/open-webui:v0.3.13
          volumeMounts:
            - name: data-volume
              mountPath: /app/backend/data
          ports:
            - name: web
              containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
