k8s/open-webui/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    gethomepage.dev/href: 'https://chat.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: open-webui
    gethomepage.dev/group: Productivity
    gethomepage.dev/icon: open-webui
    gethomepage.dev/name: Open WebUI
    cert-manager.io/cluster-issuer: cloudflare-issuer
    nginx.ingress.kubernetes.io/auth-method: GET
    nginx.ingress.kubernetes.io/auth-url: http://authelia-service.default.svc.cluster.local/api/authz/auth-request
    nginx.ingress.kubernetes.io/auth-signin: https://auth.durbin.casa?rm=$request_method
    nginx.ingress.kubernetes.io/auth-response-headers: Remote-User,Remote-Name,Remote-Groups,Remote-Email
    external-dns.alpha.kubernetes.io/target: external.durbin.casa
spec:
  ingressClassName: external
  rules:
    - host: &host chat.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: web
  tls:
    - secretName: durbin-casa-wildcard-cert
      hosts:
        - *host
